--- a/src/app/components/blog-cards/blog-cards.component.html
+++ b/src/app/components/blog-cards/blog-cards.component.html
@@ -1,1 +1,16 @@
-<p>blog-cards works!</p>
+<div class="blog-cards">
+  <div class="row container">
+    <div *ngFor="let item of data" class="col-sm-12 col-md-6 col-lg-4 card-comp">
+      <div class="card" style="width: 18rem">
+        <img class="card-img-top" src={{item.image}} alt="Card image cap" />
+        <div class="card-body">
+          <h5 class="card-title">{{item.name}}</h5>
+          <p class="card-text">
+            {{item.description}}
+          </p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
