--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,17 @@
-<p>home works!</p>
+<div class="container-fluid" id="home">
+    <div class="row">
+      <div class="col-lg-6 col-md-12 col-sm-12 text-center">
+        <h1 class="big-heading">Emopusta blog sitesine hoş geldiniz.</h1>
+      </div>
+      <div class="col-lg-6 col-md-12 col-sm-12 text-center">
+        <img
+          class="title-image"
+          src="../../../assets/ben.jpeg"
+          alt="title-image"
+        />
+      </div>
+    </div>
+  </div>
+
+  <app-blog-cards></app-blog-cards>
+  
