--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -29,6 +29,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/contact">İletişim</a>
         </li>
+        <li *ngIf="admin" class="nav-item">
+          <a class="nav-link" href="/add-blog">Blog Ekle</a>
+        </li>
       </ul>
     </div>
   </div>
