added back navigation and refactorings

--- a/src/app/components/blog-detail/blog-detail.component.html
+++ b/src/app/components/blog-detail/blog-detail.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+    <div class="back-navigation">
+        <i class="fa-solid fa-square-caret-left back" (click)="backNavigation()"></i>
+    </div>
     <div class="frame">
         <div class="author-container">
             <span class="author">written by {{author}}</span>
