--- a/src/app/components/blog-detail/blog-detail.component.css
+++ b/src/app/components/blog-detail/blog-detail.component.css
@@ -30,3 +30,12 @@
     line-height: 1.5rem;
     font-family: 'Courier New', Courier, monospace;
 }
+.back-navigation{
+    
+    background-color: beige;
+}
+.back{
+    padding: 10px 20px;
+    font-size: xx-large;
+    cursor: pointer;
+}
