--- a/src/app/components/blog-cards/blog-cards.component.html
+++ b/src/app/components/blog-cards/blog-cards.component.html
@@ -8,7 +8,7 @@
           <p class="card-text">
             {{item.description}}
           </p>
-          <a href="blog-detail/{{item.id}}" class="btn btn-primary">Go somewhere</a>
+          <a href="blog-detail/{{item.id}}" class="btn btn-primary">Detaylar</a>
         </div>
       </div>
     </div>
