--- a/src/app/components/blog-list/blog-list.component.html
+++ b/src/app/components/blog-list/blog-list.component.html
@@ -1,23 +1,25 @@
 
 <!-- todo add search -->
-<div class="container">
+<div>
 
-    <nav class="navbar navbar-light bg-light">
-        <form class="form-inline">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-</nav>
-<ul class="list-group">
-    <li *ngFor="let blog of blogs; let i = index" class="list-group-item">{{blogs[i]}}</li>
-</ul>
-<div class="pagination">
-    <nav aria-label="Page navigation example">
-        <ul class="paginate">
-            <button  [disabled]="!hasPrevious" (click)="previousButton()">Previous</button>
-            <button *ngFor="let item of counter;let i = index" >{{i+1}}</button>
-            <button  [disabled]="!hasNext" (click)="nextButton()">Next</button>
+    <div class="container">
+        
+        <nav class="navbar navbar-light bg-light">
+            <form class="form-inline">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            </form>
+        </nav>
+        <ul class="list-group">
+            <li *ngFor="let blog of blogs; let i = index" class="list-group-item">{{blogs[i]}}</li>
         </ul>
-    </nav>
-</div>
+        <div class="pagination">
+            <nav aria-label="Page navigation">
+                <ul class="paginate">
+                    <button  [disabled]="!hasPrevious" (click)="previousButton()">Previous</button>
+                    <button *ngFor="let item of counter;let i = index" (click)="spesificButton(i)">{{i+1}}</button>
+                    <button  [disabled]="!hasNext" (click)="nextButton()">Next</button>
+                </ul>
+            </nav>
+        </div>
+    </div>
 </div>
