added blog list link to navbar

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -32,6 +32,9 @@
         <li *ngIf="admin" class="nav-item">
           <a class="nav-link" href="/add-blog">Blog Ekle</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/blog-list">Blog Listele</a>
+        </li>
       </ul>
     </div>
   </div>
