--- a/src/app/components/blog-list/blog-list.component.css
+++ b/src/app/components/blog-list/blog-list.component.css
@@ -1,3 +1,14 @@
 .pagination{
-    text-align: center;
+    margin-top: 10px;
+    
+}
+
+.list-group-text{
+    text-decoration: none;
+    color: black;
+}
+
+.list-group-item{
+    cursor: pointer;
+
 }
