--- a/src/app/components/blog-list/blog-list.component.html
+++ b/src/app/components/blog-list/blog-list.component.html
@@ -10,13 +10,13 @@
             </form>
         </nav>
         <ul class="list-group">
-            <li *ngFor="let blog of blogs; let i = index" class="list-group-item">{{blogs[i]}}</li>
+            <li *ngFor="let blog of blogs; let i = index" class="list-group-item" (click)="clickListItem(i)">{{blogs[i]["name"]}}</li>
         </ul>
         <div class="pagination">
             <nav aria-label="Page navigation">
                 <ul class="paginate">
                     <button  [disabled]="!hasPrevious" (click)="previousButton()">Previous</button>
-                    <button *ngFor="let item of counter;let i = index" (click)="spesificButton(i)">{{i+1}}</button>
+                    <button *ngFor="let item of counter;let i = index" (click)="spesificButton(i)" >{{i+1}}</button>
                     <button  [disabled]="!hasNext" (click)="nextButton()">Next</button>
                 </ul>
             </nav>
